Adds extensions to several pekko utitilities: cluster, persistence, stream, etc.